--- a/frontend/src/app/components/question-management/question-management.component.html
+++ b/frontend/src/app/components/question-management/question-management.component.html
@@ -10,18 +10,11 @@
               <option value="true">aceitas</option>
               <option value="false">não aceitas</option>
             </select>
-            <select name="questions" id="questions" [(ngModel)]="ordination">
-                <option value="desc">tipo de ordenação</option>
-                <option value="asc">+antigos</option>
-                <option value="desc">+recentes</option>
-                <option value="true">aceitos</option>
-                <option value="false">não aceitos</option>
-            </select>
             <div class="input-group-append">
                 <button (click)="searchQuestions()" class="btn btn-info" type="button">Pesquisar</button>
             </div>
             <div class="input-group-append">
-                <a routerLink="#" class="btn btn-success" (click)="addQuestion()" data-bs-toggle="modal" data-bs-target="#exampleModal">+Adiconar</a>
+                <a routerLink="#" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addQuestionModal">+Adicionar</a>
             </div>
             <div class="input-group-append">
               <a class="btn btn-primary" type="button" routerLink="/question-management/approvals">Validação de perguntas</a>
@@ -57,7 +50,7 @@
                 {{question.statement}}
               </div>
               <div class="div-icon">
-                <a routerLink="#" class="btn-icon btn-group" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="getQuestionById(question.questionId)">
+                <a routerLink="#" class="btn-icon btn-group" data-bs-toggle="modal" data-bs-target="#updateQuestionModal" (click)="getQuestionById(question.questionId)">
                   <svg id="svg-edit" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
                     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
                   </svg>
@@ -105,7 +98,7 @@
     </div>
 </div>
 
-<div class="modal" id="exampleModal" tabindex="-1">
+<div class="modal" id="updateQuestionModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
           <div class="modal-header">
@@ -113,7 +106,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-              <form [formGroup]="formQuestion" id="form">
+              <form [formGroup]="formUpdateQuestion" id="form">
                   
                   <div class="form-outline form-white mb-2">
                       <label><strong>Pergunta</strong></label>
@@ -140,6 +133,44 @@
                       <p class="card-title text-center">{{question.amountFailures}}</p>
                   </div>
 
+                  <div *ngFor="let answer of formUpdateAnswers.controls; let i = index">
+                    <div class="form-outline form-white mb-2" [formGroup]="$any(answer)">
+                      <label><strong>Resposta {{i+1}}</strong></label>
+                      <input class="input" type="text" formControlName="description">
+                    </div>
+                    <div class="form-outline form-white mb-2">
+                      <label><strong>correta?</strong></label>
+                      <ng-container [formGroup]="$any(answer)">
+                        <input type="radio" formControlName="correct" [value]="false" /> Não
+                        <input type="radio" formControlName="correct" [value]="true" /> Sim
+                      </ng-container>
+                    </div>
+                  </div>
+              </form>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              <button type="button" class="btn btn-warning" style="margin: 5px" (click)="editQuestion()" data-bs-dismiss="modal">Editar</button>
+          </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal" id="addQuestionModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Adicionar pergunta</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <form [formGroup]="formQuestion" id="form">
+                  
+                  <div class="form-outline form-white mb-2">
+                      <label><strong>Pergunta</strong></label>
+                      <input class="input" type="text" formControlName="statement">
+                  </div>
+
                   <div *ngFor="let answer of formAnswers.controls; let i = index">
                     <div class="form-outline form-white mb-2" [formGroup]="$any(answer)">
                       <label><strong>Resposta {{i+1}}</strong></label>
@@ -156,8 +187,8 @@
               </form>
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Fechar</button>
-              <button type="button" class="btn btn-outline-warning" style="margin: 5px" (click)="editQuestion()" data-bs-dismiss="modal">Editar</button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              <button type="button" class="btn btn-success" style="margin: 5px" (click)="addQuestion()" data-bs-dismiss="modal">Adicionar</button>
           </div>
     </div>
   </div>
