--- a/frontend/src/app/components/question-management-approval/question-management-approval.component.html
+++ b/frontend/src/app/components/question-management-approval/question-management-approval.component.html
@@ -38,12 +38,18 @@
                         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
                     </svg>
                 </button>
+                <a routerLink="#" class="btn btn-secondary btn-icon" data-bs-toggle="modal" data-bs-target="#infoQuestionModal" (click)="getQuestionById(question.questionId)">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                    <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                  </svg>
+                </a>
               </div>
             </div>
           </li>
       </ul>
     </div>
-    <div class="mt-3 container">
+    <div class="mt-3 container" *ngIf="questions.length">
       <div class="page-size">
         <p>Itens por busca:</p>
         <select (change)="handlePageSizeChange($event)">
@@ -74,4 +80,38 @@
         </ul>
       </div>
     </div>
+</div>
+
+<div class="modal" id="infoQuestionModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Informações da pergunta</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="form-outline form-white mb-2">
+                <label><strong>Pergunta</strong></label>
+                <p>{{question?.statement}}</p>
+            </div>
+            <div *ngFor="let answer of question?.answers; let i = index">
+              <div class="form-outline form-white mb-2">
+                <label><strong>Resposta {{i+1}}</strong></label>
+                <p>{{answer?.description}}</p>
+                <label><strong>correta?</strong></label>
+                <ng-container *ngIf="answer?.correct">
+                  <p>Sim</p>
+                </ng-container>
+                <ng-container *ngIf="!answer?.correct">
+                  <p>Não</p>
+                </ng-container>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success" data-bs-dismiss="modal" (click)="validateQuestion(question.questionId, 'True')">Aprovar</button>
+            <button type="button" class="btn btn-danger" style="margin: 5px" data-bs-dismiss="modal" (click)="validateQuestion(question.questionId, 'False')">Rejeitar</button>
+        </div>
+    </div>
+  </div>
 </div>
