feat: noticação quando tem alguma pergunta para validação

--- a/frontend/src/app/components/question-management/question-management.component.html
+++ b/frontend/src/app/components/question-management/question-management.component.html
@@ -17,7 +17,7 @@
                 <a routerLink="#" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addQuestionModal">+Adicionar</a>
             </div>
             <div class="input-group-append">
-              <a class="btn btn-primary" type="button" routerLink="/question-management/approvals">Validação de perguntas</a>
+              <a id="btn-validation" data-count="0" class="btn btn-primary" type="button" routerLink="/question-management/approvals">Validação de perguntas</a>
             </div>
         </div>
       </div>
