--- a/frontend/src/app/components/question-management/question-management.component.css
+++ b/frontend/src/app/components/question-management/question-management.component.css
@@ -114,6 +114,23 @@ p {
     justify-content: center;
 }
 
+#btn-validation::before {
+    content: attr(data-count);
+    background-color: red;
+    font-size: 12px;
+    font-family: sans-serif;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 1.7em;
+    min-height: 1.7em;
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    border-radius: 50%;
+}
+
 @media(max-width: 500px) {
 
     #div-search{
