--- a/frontend/src/app/components/play/play.component.html
+++ b/frontend/src/app/components/play/play.component.html
@@ -1,3 +1,5 @@
+<app-alert></app-alert>
+
 <div class="container">
     <div class="div-form">
         <div class="question"><p>{{question?.statement}}</p></div>
