--- a/frontend/src/app/components/play/play.component.html
+++ b/frontend/src/app/components/play/play.component.html
@@ -24,3 +24,22 @@
         </div>
     </div>
 </div>
+
+<div class="modal" tabindex="-1" #ending>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Fim de Jogo!</h5>
+          <a type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" routerLink="/home"></a>
+        </div>
+        <div class="modal-body">
+          <p>{{message}}</p>
+          <h2>Você ganhou {{endedAward}} reais</h2>
+        </div>
+        <div class="modal-footer">
+          <a class="btn btn-secondary" type="button" routerLink="/home">Fechar</a>
+          <button type="button" class="btn btn-primary" (click)="newMatch()">Iniciar um novo jogo</button>
+        </div>
+      </div>
+    </div>
+  </div>
