--- a/frontend/src/app/components/question-management/question-management.component.css
+++ b/frontend/src/app/components/question-management/question-management.component.css
@@ -131,6 +131,23 @@ p {
     border-radius: 50%;
 }
 
+#questions{
+    display: block;
+    padding: 0.375rem 0.40rem 0.375rem ;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--bs-body-color);
+    appearance: none;
+    background-color: var(--bs-body-bg);
+    background-repeat: no-repeat;
+    background-position: right 0.75rem center;
+    background-size: 16px 12px;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    border-radius: var(--bs-border-radius);
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
 @media(max-width: 500px) {
 
     #div-search{
