--- a/frontend/src/app/components/question-management/question-management.component.html
+++ b/frontend/src/app/components/question-management/question-management.component.html
@@ -69,7 +69,7 @@
     <div class="mt-3 container" *ngIf="questions.length">
       <div class="page-size">
         <p>Itens por busca:</p>
-        <select (change)="handlePageSizeChange($event)">
+        <select id="questions" (change)="handlePageSizeChange($event)">
           <option *ngFor="let size of pageSizes" [ngValue]="size">
             {{ size }}
           </option>
