--- a/frontend/src/app/components/question-management-approval/question-management-approval.component.css
+++ b/frontend/src/app/components/question-management-approval/question-management-approval.component.css
@@ -8,21 +8,23 @@
 }
 
 .container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: "select ul";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse;
+    flex-wrap: wrap-reverse;
 }
 
 .page-size{
-    grid-area: select;
-    text-align: end;
-    padding-top: 3px;
-    padding-right: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .page{
-    grid-area: ul;
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
 
@@ -87,6 +89,24 @@ h3 {
 #questions{
     display: block;
     padding: 0.375rem 0.40rem 0.375rem ;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--bs-body-color);
+    appearance: none;
+    background-color: var(--bs-body-bg);
+    background-repeat: no-repeat;
+    background-position: right 0.75rem center;
+    background-size: 16px 12px;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    border-radius: var(--bs-border-radius);
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+#pagesize{
+    display: block;
+    padding: 0.375rem 0.40rem 0.375rem ;
+    height: 35px;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
