feat: aceitando imagem

--- a/frontend/src/app/components/register/register.component.css
+++ b/frontend/src/app/components/register/register.component.css
@@ -75,3 +75,9 @@ p:after {
     left: 0.5em;
     margin-right: -50%;
 }
+
+#div-file{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
