--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -6,6 +6,14 @@
     position: relative;
 }
 
+a {
+    color: white;
+}
+
+p {
+    color: white;
+}
+
 @media(max-width: 1000px){
     #offcanvasDarkNavbar{
         width: 200px;
@@ -61,4 +69,9 @@
 .page{
     grid-area: ul;
     justify-content: center;
+}
+
+#exit {
+    position: absolute;
+    right: 5px;
 }
