--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,33 +1,56 @@
-<nav class="navbar navbar-dark bg-dark fixed-top" id="nav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home">Show do Milhão</a>
+    <a class="navbar-brand" routerLink="/home">
+      <img src="/assets/images/logo.png" alt="Logo" width="45" height="34" class="d-inline-block align-text-top">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-      <div class="offcanvas-header">
-        <div class="div-itens">
-          <img id="img" src="{{url_photo}}" alt="" [hidden]="!url_photo">
-          <p class="offcanvas-title" id="offcanvasDarkNavbarLabel">{{name}}</p>
-        </div>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="/user">Editar sua conta</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/question-management">Gestão de perguntas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/hall-da-fama">Hall da fama</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/"><h5 (click)="logout()" style="color:red">SAIR</h5></a>
-          </li>
-        </ul>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/user">Editar sua conta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/question-management">Gestão de perguntas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/hall-da-fama">Hall da fama</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/"><h5 (click)="logout()" style="color:red">SAIR</h5></a>
+        </li>
+      </ul>
+      <div class="div-itens justify-content-end flex-grow-1 pe-3">
+        <p class="offcanvas-title" id="offcanvasDarkNavbarLabel">{{name}}</p>
+        <img id="img" src="{{url_photo}}" alt="" [hidden]="!url_photo">
       </div>
     </div>
   </div>
 </nav>
+
+<div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+  <div class="offcanvas-header">
+    <div class="div-itens">
+      <img id="img" src="{{url_photo}}" alt="" [hidden]="!url_photo">
+      <p class="offcanvas-title" id="offcanvasDarkNavbarLabel">{{name}}</p>
+    </div>
+    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" routerLink="/user">Editar sua conta</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/question-management">Gestão de perguntas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/hall-da-fama">Hall da fama</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/"><h5 (click)="logout()" style="color:red">SAIR</h5></a>
+      </li>
+    </ul>
+  </div>
+</div>
