--- a/frontend/src/app/components/user/user.component.html
+++ b/frontend/src/app/components/user/user.component.html
@@ -17,9 +17,9 @@
         </div>
         <div class="modal-footer">
             <div id="btn-create">
-                <a routerLink="#" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">Editar</a>
+                <a routerLink="#" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">Editar</a>
             </div>
-            <button type="button" class="btn btn-outline-danger" style="margin: 5px" (click)="deleteUser()" data-bs-dismiss="modal">Excluir minha conta</button>
+            <button type="button" class="btn btn-danger" style="margin: 5px" (click)="deleteUser()" data-bs-dismiss="modal">Excluir minha conta</button>
         </div>
     </div>
 </div>
@@ -55,8 +55,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Fechar</button>
-                <button type="button" class="btn btn-outline-warning" style="margin: 5px" (click)="updateUser()" data-bs-dismiss="modal">Editar</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                <button type="button" class="btn btn-warning" style="margin: 5px" (click)="updateUser()" data-bs-dismiss="modal">Editar</button>
             </div>
       </div>
     </div>
